--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -4,7 +4,12 @@ defaultGraphic: '5.png'
 body: body-primary
 ---
             <header class="header">
+            <nav class="navbar">
                 {% include "partials/backbutton.njk" %}
+ </nav>
+
+ </header>
+
 
             </header>
     <article class="article">
