--- a/_includes/layouts/home.njk
+++ b/_includes/layouts/home.njk
@@ -1,10 +1,11 @@
 ---
 layout: layouts/base.njk
 body: body-primary
+openGraph: 'fromjason'
 ---
 
  <header class="header">
-
+ 
  {% include "partials/nav.njk" %}
  {% include "partials/masthead.njk" %}
 
