--- a/_includes/layouts/oddity.njk
+++ b/_includes/layouts/oddity.njk
@@ -3,10 +3,11 @@ layout: layouts/base.njk
 defaultGraphic: '5.png'
 body: body-secondary
 ---
-
- <header class="header">
-                {% include "partials/backbutton.njk" %}
-
+            <header class="header">
+                        <nav class="navbar">
+                               {% include "partials/backbutton.njk" %}
+         
+ </nav>
             </header>
     <article class="article">
     <img class="oddity-img" src="{{ settings.siteRoot}}/img/graphics/{% if graphic %}{{ graphic }}{% else %}{{ defaultGraphic }}{% endif %}" loading="lazy" alt="{{ graphicAlt }}" > 
