--- a/_includes/partials/masthead.njk
+++ b/_includes/partials/masthead.njk
@@ -1,5 +1,5 @@
                <aside class="masthead">
                   <img src="{{ settings.siteRoot}}/img/{{ logo }}" loading="lazy" alt="grotesque mask illustration" class="deckhead-img">
                   <h1 class="display">{{ title }}</h1>
-                  <p class="lead">{{ description }}</p>
+                  <p class="lead enter-text">{{ description }}</p>
                </aside>
