--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,7 +3,7 @@
    <head>
       <meta charset="utf-8">
 	<title>{{ title }}</title>
-	<link rel="micropub" href="https://fromjason.xyz/.netlify/functions/micropub">
+	<link rel="micropub" href="https://fromjason.xyz/netlify/functions/micropub">
 	<meta name="description" content="{{ description or metadata.description }}">
       <meta content="From Jason" property="og:title">
       <meta content="This is my digital garden." property="og:description">
