--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -3,6 +3,32 @@ layout: layouts/base.njk
 defaultGraphic: '5.png'
 body: body-primary
 ---
+<!-- CSS for the elements -->
+<style>
+.ipsum-div {
+    justify-content: space-between;
+    align-items: center;
+    display: flex;
+}
+.lorem-para {
+    flex: 1;
+}
+.copy-btn {
+    cursor: pointer;
+    padding: 10px;
+    text-decoration: none;
+		max-width: 100%;
+    display: inline-block;
+}
+.copy-icon {
+		max-width: 100%;
+    vertical-align: middle;
+    display: inline-block;
+    cursor: pointer;
+    width: 17px;
+}
+
+</style>
             <header class="header">
             <nav class="navbar">
                 {% include "partials/backbutton.njk" %}
@@ -18,3 +44,25 @@ body: body-primary
 {{ content | safe }}    
 
    </article>
+   <!-- Javascript --><script>
+// This script sets up the copy functionality for each button
+
+// Function to copy text to clipboard
+function copyTextToClipboard(text) {
+  navigator.clipboard.writeText(text).then(function() {
+    alert('Text successfully copied to clipboard');
+  }).catch(function(err) {
+    alert('Error in copying text: ' + err);
+  });
+}
+
+// Event listener for all copy buttons
+document.querySelectorAll('.copy-btn').forEach(function(button) {
+  button.addEventListener('click', function(event) {
+    // Get the ID of the target element from the data-target attribute
+    var targetId = event.target.getAttribute('data-target');
+    var text = document.getElementById(targetId).innerText;
+    copyTextToClipboard(text);
+  });
+});
+</script>
