--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -14,18 +14,25 @@ body: body-primary
     flex: 1;
 }
 .copy-btn {
+z-index: 9999;
+    width: 35px;
+    height: 35px;
     cursor: pointer;
-    padding: 10px;
+    justify-content: center;
+    align-items: center;
     text-decoration: none;
+    display: flex;
+    position: relative
 		max-width: 100%;
-    display: inline-block;
+
 }
 .copy-icon {
 		max-width: 100%;
     vertical-align: middle;
     display: inline-block;
     cursor: pointer;
-    width: 17px;
+		width: 17px;
+		z-index: 99;
 }
 
 </style>
