--- a/_includes/layouts/page.njk
+++ b/_includes/layouts/page.njk
@@ -22,8 +22,10 @@ z-index: 9999;
     align-items: center;
     text-decoration: none;
     display: flex;
-    position: relative
-		max-width: 100%;
+    position: relative;
+	max-width: 100%;
+	margin-right: 10px;
+
 
 }
 .copy-icon {
