--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -1,97 +1,83 @@
 <!DOCTYPE html>
 <html lang="{{ metadata.language }}">
-   <head>
-      <meta charset="utf-8">
-	<title>{{ title }}</title>
-<link href="https://mastodon.social/@fromjason" rel="me">
-	<link rel="micropub" href="https://www.fromjason.xyz/.netlify/functions/micropub">
-	<meta name="description" content="{{ description or metadata.description }}">
-      <meta content="From Jason" property="og:title">
-      <meta content="This is my digital garden." property="og:description">
-      <meta content="From Jason" property="twitter:title">
-      <meta content="This is my digital garden." property="twitter:description">
-      <meta property="og:type" content="website">
-      <meta content="summary_large_image" name="twitter:card">
-      <meta content="width=device-width, initial-scale=1" name="viewport">
-
-		{#- Atom and JSON feeds included by default #}
-		<link rel="alternate" href="/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
-		<link rel="alternate" href="/feed/feed.json" type="application/json" title="{{ metadata.title }}">
-      
-  <link rel="stylesheet" href="{{ settings.siteRoot}}/css/one.css">
-      
-   
-      		
-      <script type="text/javascript">
-         ! function(o, c) {
-           var n = c.documentElement,
-             t = " w-mod-";
-           n.className += t + "js", ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
-         }(window, document);
-      </script>
-
-      
-      <link href="{{ settings.siteRoot}}/img/favicon.png" rel="shortcut icon" type="image/x-icon">
-      <link href="{{ settings.siteRoot}}/img/webclip.png" rel="apple-touch-icon"> 
-      <meta property="og:title" content="{{ title }}" />
-      <meta content="https://fromjason.xyz/img/{% if openGraph %}{{ openGraph }}{% else %}{{ sub }}{% endif %}-opengraph.png" loading="lazy" alt="{{ graphicAlt }}-opengraph.png" property="og:image">
-      <meta content="https://fromjason.xyz/img/{% if openGraph %}{{ openGraph }}{% else %}{{ sub }}{% endif %}-opengraph.png" property="twitter:image">
-
-   </head>
-   <body class="{{ body }}">
- 
-     
-         <div class="w-layout-blockcontainer container-650px container-height w-container">
-
-			{{ content | safe }}
-			
-            <footer class="footer">
-               <div class="_400w-vflex">
-            
-                  <img src="{{ settings.siteRoot}}/img/finis.svg" loading="lazy" alt="Ornamentation with the word Finis in a banner." class="ft-img"> 
-                  <div class="copywrite">2086© <em>(so I don&#x27;t forget to change the year)</em> From Jason 1.1.0</div>
-                  <div id="dedication" class="dedication">This site is dedicated to the old web, the <em>weird</em> web, the web that screamed in horror when summoned through a land line.</div>
-
-                  <a id="randomLink" href="#" class="randomlink">Don&#x27;t click here</a>
-                  <div class="w-embed w-script">
-              <script>
-                // Array of URLs
-                var urls = [
-                  "/irate-ivan/",
-                  "/irate-ivan/",
-                  "/shame-fish/",
-                  "/shame-fish/",
-                  "/that-look-lion/",
-                  "/that-look-lion/",
-                  "/yuck-leopard/",
-                  "/yuck-leopard/",
-                  "/drunk-baby/",
-                  "/drunk-baby/",
-                  "/photog-phil/"
-                ];
-
-                // Function to select a random URL and update the hyperlink
-                function setRandomURL() {
-                  var randomIndex = Math.floor(Math.random() * urls.length);
-                  var randomURL = urls[randomIndex];
-                  document.getElementById("randomLink").href = randomURL;
-                }
-
-                // Call the function to set an initial random URL
+  <head>
+    <meta charset="utf-8">
+    <title>{{ title }}</title>
+    <link href="https://mastodon.social/@fromjason" rel="me">
+    <link rel="micropub" href="https://www.fromjason.xyz/.netlify/functions/micropub">
+    <meta name="description" content="{{ description or metadata.description }}">
+    <meta content="From Jason" property="og:title">
+    <meta content="This is my digital garden." property="og:description">
+    <meta content="From Jason" property="twitter:title">
+    <meta content="This is my digital garden." property="twitter:description">
+    <meta property="og:type" content="website">
+    <meta content="summary_large_image" name="twitter:card">
+    <meta
+    content="width=device-width, initial-scale=1" name="viewport"> {#- Atom and JSON feeds included by default #}
+    <link rel="alternate" href="/{{ sub | string }}/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
+    <link rel="alternate" href="/{{ sub | string }}/feed/feed.json" type="application/json" title="{{ metadata.title }}">
+    <link rel="stylesheet" href="{{ settings.siteRoot }}/css/one.css">
+    <script type="text/javascript">
+      !function (o, c) {
+        var n = c.documentElement,
+          t = " w-mod-";
+        n.className += t + "js",
+        ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
+      }(window, document);
+    </script>
+    <link href="{{ settings.siteRoot }}/img/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="{{ settings.siteRoot }}/img/webclip.png" rel="apple-touch-icon">
+    <meta property="og:title" content="{{ title }}"/>
+    <meta content="https://fromjason.xyz/img/{% if openGraph %}{{ openGraph }}{% else %}{{ sub }}{% endif %}-opengraph.png" loading="lazy" alt="{{ graphicAlt }}-opengraph.png" property="og:image">
+    <meta
+      content="https://fromjason.xyz/img/{% if openGraph %}{{ openGraph }}{% else %}{{ sub }}{% endif %}-opengraph.png"
+      property="twitter:image">
+  </head>
+  <body class="{{ body }}">
+    <div class="w-layout-blockcontainer container-650px container-height w-container">
+      {{ content | safe }}
+      <footer class="footer">
+        <div class="_400w-vflex">
+          <img src="{{ settings.siteRoot }}/img/finis.svg" loading="lazy" alt="Ornamentation with the word Finis in a banner." class="ft-img">
+          <div class="copywrite">2086©
+            <em>(so I don&#x27;t forget to change the year)</em>
+            From Jason 1.1.0</div>
+          <div id="dedication" class="dedication">This site is dedicated to the old web, the
+            <em>weird</em>
+            web, the web that screamed in horror when summoned through a land line.</div>
+          <a id="randomLink" href="#" class="randomlink">Don&#x27;t click here</a>
+          <div class="w-embed w-script">
+            <script>
+              // Array of URLs
+              var urls = [
+                "/irate-ivan/",
+                "/irate-ivan/",
+                "/shame-fish/",
+                "/shame-fish/",
+                "/that-look-lion/",
+                "/that-look-lion/",
+                "/yuck-leopard/",
+                "/yuck-leopard/",
+                "/drunk-baby/",
+                "/drunk-baby/",
+                "/photog-phil/"
+              ];
+              // Function to select a random URL and update the hyperlink
+              function setRandomURL() {
+                var randomIndex = Math.floor(Math.random() * urls.length);
+                var randomURL = urls[randomIndex];
+                document.getElementById("randomLink").href = randomURL;
+              }
+              // Call the function to set an initial random URL
+              setRandomURL();
+              // Add a click event to change the URL on each click
+              document.getElementById("randomLink").addEventListener("click", function (event) {
                 setRandomURL();
-
-                // Add a click event to change the URL on each click
-                document.getElementById("randomLink").addEventListener("click", function(event) {
-                  setRandomURL();
-                });
-              </script>
-            </div>
-               </div>
-            </footer>
-         </div>
-     
-      
-    
-
-   </body>
+              });
+            </script>
+          </div>
+        </div>
+      </footer>
+    </div>
+  </body>
 </html>
