--- a/content/notebook/feed/feed.njk
+++ b/content/notebook/feed/feed.njk
@@ -1,6 +1,6 @@
 ---
-# Metadata comes from _data/subsdata.js
-permalink: /notebook/feed/feed.xml
+# metadata comes from _data/subsdata.js
+permalink: notebook/feed/feed.xml
 ---
 
 <?xml version="1.0" encoding="utf-8"?>
@@ -10,16 +10,14 @@ permalink: /notebook/feed/feed.xml
     <link href="{{ permalink | htmlBaseUrl(subsdata.notebook.url) }}" rel="self"/>
     <link href="{{ subsdata.notebook.url | addPathPrefixToFullUrl }}"/>
     <updated>
-        {% set subAllnotebook = collections.posts | include("data.sub", "notebook") %}
-        {{ subAllnotebook | getNewestCollectionItemDate | dateToRfc3339 }}
-    </updated>
+        {% set subAllnotebook = collections.posts | include("data.sub", "notebook") %}{{ subAllnotebook | getNewestCollectionItemDate | dateToRfc3339 }}</updated>
     <id>{{ subsdata.notebook.url }}</id>
     <author>
         <name>{{ subsdata.notebook.author.name }}</name>
         <email>{{ subsdata.notebook.author.email }}</email>
     </author>
     {%- for post in subAllnotebook | reverse %}
-        {% set absolutePostUrl %}{{ post.url | htmlBaseUrl(metadata.url) }}{% endset %}
+        {% set absolutePostUrl %}{{ post.url | htmlBaseUrl(subsdata.notebook.url) }}{% endset %}
         <entry>
             <title>{{ post.data.title }}</title>
             <link href="{{ absolutePostUrl }}"/>
