--- a/content/notebook/feed/feed.njk
+++ b/content/notebook/feed/feed.njk
@@ -1,6 +1,6 @@
 ---
 # metadata comes from _data/subsdata.js
-permalink: notebook/feed/feed.xml
+permalink: /notebook/feed/feed.xml
 ---
 
 <?xml version="1.0" encoding="utf-8"?>
