--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -14,8 +14,8 @@
     <meta content="summary_large_image" name="twitter:card">
     <meta
     content="width=device-width, initial-scale=1" name="viewport"> {#- Atom and JSON feeds included by default #}
-    <link rel="alternate" href="/notebook/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
-    <link rel="alternate" href="/notebook/feed/feed.json" type="application/json" title="{{ metadata.title }}">
+    <link rel="alternate" href="/{{ sub }}/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
+    <link rel="alternate" href="/{{ sub }}/feed/feed.json" type="application/json" title="{{ metadata.title }}">
     <link rel="stylesheet" href="{{ settings.siteRoot }}/css/one.css">
     <script type="text/javascript">
       !function (o, c) {
