--- a/content/notebook/feed/json.njk
+++ b/content/notebook/feed/json.njk
@@ -1,10 +1,11 @@
 ---
 # Metadata comes from _data/subsdata.js
 permalink: /notebook/feed/feed.json
+sub: 'notebook'
 ---
 {
     "version": "https://jsonfeed.org/version/1.1",
-    "title": "{{ subsdata.notebook.title }}",
+    "title": "{{ subsdata.notebook.fulltitle }}",
     "language": "{{ subsdata.notebook.language }}",
     "home_page_url": "{{ subsdata.notebook.url | addPathPrefixToFullUrl }}",
     "feed_url": "{{ permalink | htmlBaseUrl(subsdata.notebook.url) }}",
