--- a/content/feeds/feed-freelance.njk
+++ b/content/feeds/feed-freelance.njk
@@ -1,6 +1,6 @@
 ---
 # metadata comes from _data/subsdata.js
-permalink: /freelance/feed/feed.xml
+permalink: /p/freelance/feed/feed.xml
 sub: 'freelance'
 ---
 <?xml version="1.0" encoding="utf-8"?>
