--- a/content/feeds/feed-notebook.njk
+++ b/content/feeds/feed-notebook.njk
@@ -1,6 +1,6 @@
 ---
 # metadata comes from _data/subsdata.js
-permalink: /notebook/feed/feed.xml
+permalink: /p/notebook/feed/feed.xml
 sub: 'notebook'
 ---
 <?xml version="1.0" encoding="utf-8"?>
