--- a/content/feeds/feed-stories.njk
+++ b/content/feeds/feed-stories.njk
@@ -1,6 +1,6 @@
 ---
 # metadata comes from _data/subsdata.js
-permalink: /stories/feed/feed.xml
+permalink: /p/stories/feed/feed.xml
 sub: 'stories'
 ---
 <?xml version="1.0" encoding="utf-8"?>
