--- a/content/feeds/json-freelance.njk
+++ b/content/feeds/json-freelance.njk
@@ -1,6 +1,6 @@
 ---
 # Metadata comes from _data/subsdata.js
-permalink: /freelance/feed/feed.json
+permalink: /p/freelance/feed/feed.json
 sub: 'freelance'
 ---
 {
