--- a/content/feeds/json-notebook.njk
+++ b/content/feeds/json-notebook.njk
@@ -1,6 +1,6 @@
 ---
 # Metadata comes from _data/subsdata.js
-permalink: /notebook/feed/feed.json
+permalink: /p/notebook/feed/feed.json
 sub: 'notebook'
 ---
 {
