--- a/content/feeds/json-stories.njk
+++ b/content/feeds/json-stories.njk
@@ -1,6 +1,6 @@
 ---
 # Metadata comes from _data/subsdata.js
-permalink: /stories/feed/feed.json
+permalink: /p/stories/feed/feed.json
 sub: 'stories'
 ---
 {
