--- a/content/plots/freelance.njk
+++ b/content/plots/freelance.njk
@@ -10,6 +10,7 @@ description: Freelance? In this economy?
    <p>
       Here, I'll post guides, resources, and musings related to freelancing with a leftist & ADHD slant. I've been a freelancer for nearly a decade. I have hard opinions. I hope to help new freelancers get going.
    </p>
+   <p>Subscribe to my Freelance plot: RSS <a href="https://fromjason.xyz/p/freelance/feed/feed.xml" class="accent" title="rss feed for freelance">xml feed</a> or <a href="https://fromjason.xyz/p/freelance/feed/feed.json" class="accent" title="rss feed for freelance">json feed</a></p>
 </article>
 
    {% set filterByPlot = collections.posts | include("data.sub", plot) %}
