--- a/content/plots/stories.njk
+++ b/content/plots/stories.njk
@@ -10,6 +10,7 @@ description: Short stories, flash fiction, & a secret third thing.
    <p>
       Here, I'll post my short stories and flash fiction. For a long while, I wrote stories in secret that would break down in the second act and then left to rot in my drafts. I'm ready to get hurt again.
    </p>
+      <p>Subscribe to my stories plot: RSS <a href="https://fromjason.xyz/p/stories/feed/feed.xml" class="accent" title="rss feed for stories">xml feed</a> or <a href="https://fromjason.xyz/p/stories/feed/feed.json" class="accent" title="rss feed for stories">json feed</a>.</p>
 </article>
 
    {% set filterByPlot = collections.posts | include("data.sub", plot) %}
