--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -20,8 +20,7 @@ eleventyComputed:
    <h2>Where to find me</h2>
    <p>Here are a few ways to reach me and follow my writing.</p>
    <h3>Email</h3>
-   <p>Shoot me an email anytime about anything. I'd love to hear from you » <a href="mailto:simplelogin-newsletter.detonate964@simplelogin.com" title="my email forward address">Email Jason</a></p>
-   <p><i>Note: I use an email forwarding service to cut down on spam bots. I may reply to your message from a different address.</i></p>
+   <p>Shoot me an email anytime about anything. I'd love to hear from you » <a href="mailto:inbox@jvelazquez.email" title="my email address">Email Jason</a></p>
    <h3>My Socials</h3>
    <ul>
       <li>Instagram: <a href="https://instagram.com/jasondotgov" rel="me" tilte="my instagram">@jasondotgov</a></li>
