--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -29,7 +29,7 @@ eleventyComputed:
       <li>Mastodon: <a href="https://mastodon.social/@fromjason" rel="me" title="my mastadon">@fromjason</a></li>
    </ul>
    <h3>RSS Feeds</h3>
-   <p>You can now subscribe to the indvidual subs that make up From Jason  <i>*air horn noise*</i>. Use the links below or copy / paste the sub's url into your favorite RSS reader.</p>
+   <p>You can now subscribe to the indvidual plots that make up From Jason  <i>*air horn noise*</i>. Use the links below or copy / paste the plot's url into your favorite RSS reader.</p>
    <h4>XML RSS</h4>
    <ul>
       <li><a href="https://www.fromjason.xyz/notebook/feed/feed.xml" title="subscribe rss notebook">notebook</a></li>
