--- a/content/series/how to commission a logo design.njk
+++ b/content/series/how to commission a logo design.njk
@@ -16,6 +16,7 @@ If you're a freelancer starting your new business, you'll need a logo. The probl
 The How to Commission a Logo Design series attempts to solve this problem.
 </p>
 
+<h2>Table of Contents</h2>
 <div class="auto-list-block">
 
 {% set seriesIDposts = collections.posts | include("data.seriesID", "commission logo design") %}
