--- a/content/series/oddities.njk
+++ b/content/series/oddities.njk
@@ -1,6 +1,6 @@
 ---
 title: Oddities
-description: The weird pages from my footer.
+description: The dumb pages from my footer.
 sub: stories
 series: titlepage
 seriesID: oddities
