--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -41,7 +41,7 @@
           <img src="{{ settings.siteRoot }}/img/finis.svg" loading="lazy" alt="Ornamentation with the word Finis in a banner." class="ft-img">
           <div class="copywrite">2086©
             <em>(so I don&#x27;t forget to change the year)</em>
-            From Jason <a href="/p/notebook/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/" title="About From Jason 2.0">2.0.0</a></div>
+            From Jason <a href="/p/notebook/from-jason-2-0-is-an-11ty-powered-digital-garden-with-multiple-plots/" title="About From Jason 2.0">2.2.0</a></div>
           <div id="dedication" class="dedication">This site is dedicated to the old web, the
             <em>weird</em>
             web, the web that screamed in horror when summoned through a land line.</div>
@@ -50,17 +50,17 @@
             <script>
               // Array of URLs
               var urls = [
-                "/irate-ivan/",
-                "/irate-ivan/",
-                "/shame-fish/",
-                "/shame-fish/",
-                "/that-look-lion/",
-                "/that-look-lion/",
-                "/yuck-leopard/",
-                "/yuck-leopard/",
-                "/drunk-baby/",
-                "/drunk-baby/",
-                "/photog-phil/"
+                "/p/stories/s/oddities/irate-ivan/",
+                "/p/stories/s/oddities/irate-ivan/",
+                "/p/stories/s/oddities/shame-fish/",
+                "/p/stories/s/oddities/shame-fish/",
+                "/p/stories/s/oddities/that-look-lion/",
+                "/p/stories/s/oddities/that-look-lion/",
+                "/p/stories/s/oddities/yuck-leopard/",
+                "/p/stories/s/oddities/yuck-leopard/",
+                "/p/stories/s/oddities/drunk-baby/",
+                "/p/stories/s/oddities/drunk-baby/",
+                "/p/stories/s/oddities/photog-phil/"
               ];
               // Function to select a random URL and update the hyperlink
               function setRandomURL() {
