--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -3,20 +3,41 @@
   <head>
     <meta charset="utf-8">
     <title>{{ title }}</title>
-    <link href="https://mastodon.social/@fromjason" rel="me">
-    <link rel="micropub" href="https://www.fromjason.xyz/.netlify/functions/micropub">
-    <meta name="description" content="{{ description or metadata.description }}">
-    <meta content="{{ title or metadata.title}}" property="og:title">
-    <meta content="{{ description or metadata.description }}" property="og:description">
-    <meta content="{{ title or metadata.title }}" property="twitter:title">
-    <meta content="T{{ description or metadata.description }}" property="twitter:description">
-    <meta property="og:type" content="website">
-    <meta content="summary_large_image" name="twitter:card">
-    <meta
-    content="width=device-width, initial-scale=1" name="viewport"> {#- Atom and JSON feeds included by default #}
-    <link rel="alternate" href="/{{ sub }}/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}">
-    <link rel="alternate" href="/{{ sub }}/feed/feed.json" type="application/json" title="{{ metadata.title }}">
+    <!-- One CSS file for now -->
     <link rel="stylesheet" href="{{ settings.siteRoot }}/css/one.css">
+    <!-- Netlify stuff -->
+    <link rel="micropub" href="https://www.fromjason.xyz/.netlify/functions/micropub" />
+    <!-- rel=me stuff -->
+    <link rel="me" href="https://mastodon.social/@fromjason" />
+    <link rel="me" href="https://instagram.com/jasondotgov" />
+	<link rel="me" href="https://www.threads.net/@jasondotgov" />
+	<link rel="me" href="https://www.tiktok.com/@jasondotgov" />
+	<link rel="me" href="https://pixelriot.io/" />
+    <!-- Open graph stuff -->
+    <meta property="og:site_name" content="from jason" />
+    <meta property="og:type" content="{{ data.type or 'Digital Garden'}}" />
+    <meta property="og:title" content="{{ title or metadata.title}}" />
+    <meta property="og:description" content="{{ description or metadata.description }}" />
+    <meta property="og:url" content="https://fromjason.xyz{{ page.url }}" />
+    <meta property="og:updated_time" content="{{ page.date }}" />   
+    <meta property="og:image" content="https://fromjason.xyz/img/{% if openGraph %}{{ openGraph }}{% else %}{{ sub }}{% endif %}-opengraph.png" loading="lazy" alt="{{ graphicAlt }}-opengraph.png" />
+    <!-- Twitter meta that I'm sure will not work in the near future if not already because Elon is an idiot -->
+    <meta property="twitter:title" content="{{ title or metadata.title }}" />
+    <meta property="twitter:description" content="{{ description or metadata.description }}" />
+    <meta property="twitter:image" content="https://fromjason.xyz/img/{% if openGraph %}{{ openGraph }}{% else %}{{ sub }}{% endif %}-opengraph.png" loading="lazy" alt="{{ graphicAlt }}-opengraph.png" />
+    <meta name="twitter:card" content="https://fromjason.xyz/img/{% if openGraph %}{{ openGraph }}{% else %}{{ sub }}{% endif %}-opengraph.png" loading="lazy" alt="{{ graphicAlt }}-opengraph.png" />
+    <!-- Other meta stuff I don't know how to categorize -->
+    <meta name="generator" content="{{ eleventy.generator }}" />
+    <meta name="description" content="{{ description or metadata.description }}" />
+    <link rel="canonical" href="https://fromjason.xyz{{ page.url }}" />
+     <!-- RSS stuff. If the page doesn't have an rssDir key, it defaults to the notebook plot. -->
+    <meta content="width=device-width, initial-scale=1" name="viewport"> {#- Atom and JSON feeds included by default #}
+    <link rel="alternate" href="{{ rssDir or '/p/notebook' }}/feed/feed.xml" type="application/atom+xml" title="{{ metadata.title }}" />
+    <link rel="alternate" href="{{ rssDir or '/p/notebook' }}/feed/feed.json" type="application/json" title="{{ metadata.title }}" />
+    <!-- Favicon and webclip -->
+    <link href="{{ settings.siteRoot }}/img/favicon.png" rel="shortcut icon" type="image/x-icon">
+    <link href="{{ settings.siteRoot }}/img/webclip.png" rel="apple-touch-icon">
+	<!-- Javascript provided by Webflow that I have yet to test and figure out what it is. need to do that. -->
     <script type="text/javascript">
       !function (o, c) {
         var n = c.documentElement,
@@ -25,13 +46,6 @@
         ("ontouchstart" in o || o.DocumentTouch && c instanceof DocumentTouch) && (n.className += t + "touch")
       }(window, document);
     </script>
-    <link href="{{ settings.siteRoot }}/img/favicon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="{{ settings.siteRoot }}/img/webclip.png" rel="apple-touch-icon">
-    <meta property="og:title" content="{{ title }}"/>
-    <meta content="https://fromjason.xyz/img/{% if openGraph %}{{ openGraph }}{% else %}{{ sub }}{% endif %}-opengraph.png" loading="lazy" alt="{{ graphicAlt }}-opengraph.png" property="og:image">
-    <meta
-      content="https://fromjason.xyz/img/{% if openGraph %}{{ openGraph }}{% else %}{{ sub }}{% endif %}-opengraph.png"
-      property="twitter:image">
   </head>
   <body class="{{ body }}">
     <div class="w-layout-blockcontainer container-650px container-height w-container">
