--- a/content/index.njk
+++ b/content/index.njk
@@ -4,6 +4,7 @@ eleventyNavigation:
   key: from jason
   order: 1
 numberOfLatestPostsToShow: 5
+rssDir: '/p/notebook'
 title: from jason
 description: A digital garden for a physical meat bag.
 logo: 'fromjason-1.svg'
