--- a/content/plots/freelance.njk
+++ b/content/plots/freelance.njk
@@ -2,6 +2,7 @@
 plot: freelance
 plotKey: 3
 sub: plots
+rssDir: '/p/freelance'
 eleventyComputed:
   title: "{{ plot }}"
 description: Freelance? In this economy?
