--- a/content/plots/index.njk
+++ b/content/plots/index.njk
@@ -4,6 +4,7 @@ description: Plots are how I organize my digital garden.
 plot: all
 graphic: '20.png'
 graphicAlt: 'illustration of a mask'
+rssDir: '/p/notebook'
 layout: "layouts/page.njk"
 permalink: "/p/"
 eleventyNavigation:
