--- a/content/plots/stories.njk
+++ b/content/plots/stories.njk
@@ -2,6 +2,7 @@
 plot: stories
 plotKey: 4
 sub: plots
+rssDir: '/p/stories'
 eleventyComputed:
   title: "{{ plot }}"
 description: Short stories, flash fiction, & a secret third thing.
