--- a/public/css/one.css
+++ b/public/css/one.css
@@ -3070,4 +3070,8 @@ iframe {
 	font-size: var(--text--small-font-size);
 	margin-bottom: -2.5em;
 }
+/* reduced margin top for better architecture. the top sentence is always associated with the image. */
+img {
+  margin: .5em auto;
+}
           
