--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -37,7 +37,9 @@
     <link rel="alternate" href="{{ rssDir or '/p/notebook' }}/feed/feed.json" type="application/json" title="{{ metadata.title }}" />
     <!-- Favicon and webclip -->
     <link href="{{ settings.siteRoot }}/img/favicon.png" rel="shortcut icon" type="image/x-icon">
-    <link href="{{ settings.siteRoot }}/img/webclip.png" rel="apple-touch-icon">
+    <link href="{{ settings.siteRoot }}/img/webclip.png" rel="re-icon">
+    <link rel="apple-touch-icon" href="{{ settings.siteRoot }}/img/apple-touch-icon.png">
+    <link rel="icon" sizes="196x196" href="{{ settings.siteRoot }}/img/aapple-touch-icon.png">
 	<!-- Javascript provided by Webflow that I have yet to test and figure out what it is. need to do that. -->
     <script type="text/javascript">
       !function (o, c) {
