--- a/content/series/series-travel.njk
+++ b/content/series/series-travel.njk
@@ -1,13 +1,11 @@
 ---
 title: Series
-description: Series for notebook
-sub: notebook
+description: Series for travel
+sub: travel
 permalink: "/p/{{ sub }}/series/"
 ---
 
 <h1>{{ title }}</h1>
 <p class="lead under-title">{{ description }}</p>
 
-<p>
-Nothing yet, sorry.
-</p>
+<p>Nothing yet, sorry.</p>
