--- a/content/plots/stories.njk
+++ b/content/plots/stories.njk
@@ -5,7 +5,7 @@ sub: plots
 rssDir: '/p/stories'
 eleventyComputed:
   title: "{{ plot }}"
-description: Short stories, flash fiction, & a secret third thing.
+description: Short, flash, & a secret third thing.
 ---
 <article class="article">
    <p>
