--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -30,16 +30,19 @@ eleventyComputed:
    </ul>
    <h3>RSS Feeds</h3>
    <p>You can now subscribe to the indvidual plots that make up From Jason  <i>*air horn noise*</i>. Use the links below or copy / paste the plot's url into your favorite RSS reader.</p>
-   <h4>XML RSS</h4>
+   <p>Note: both xml and json versions of my rss feed provide the same content and should both work in most reeders</p>
+
    <ul>
-      <li><a href="https://www.fromjason.xyz/notebook/feed/feed.xml" title="subscribe rss notebook">notebook</a></li>
-      <li><a href="https://www.fromjason.xyz/freelance/feed/feed.xml" title="subscribe rss freelance">freelance</a></li>
-      <li><a href="https://www.fromjason.xyz/stories/feed/feed.xml" title="subscribe rss stories">stories</a></li>
+      <li>notebook: <a href="https://www.fromjason.xyz/notebook/feed/feed.xml" title="subscribe rss notebook">xml</a> | ><a href="https://www.fromjason.xyz/notebook/feed/feed.json" title="subscribe rss notebook">json</a></li>
+      <li>freelance: <a href="https://www.fromjason.xyz/freelance/feed/feed.xml" title="subscribe rss freelance">xml</a> | <a href="https://www.fromjason.xyz/freelance/feed/feed.json" title="subscribe rss freelance">json</a></li>
+      <li>stories: <a href="https://www.fromjason.xyz/stories/feed/feed.xml" title="subscribe rss stories">xml</a> | <a href="https://www.fromjason.xyz/stories/feed/feed.json" title="subscribe rss stories">json</a></li>
    </ul>
-   <h4>JSON RSS</h4>
-   <ul>
-      <li><a href="https://www.fromjason.xyz/notebook/feed/feed.json" title="subscribe rss notebook">notebook</a></li>
-      <li><a href="https://www.fromjason.xyz/freelance/feed/feed.json" title="subscribe rss freelance">freelance</a></li>
-      <li><a href="https://www.fromjason.xyz/stories/feed/feed.json" title="subscribe rss stories">stories</a></li>
-   </ul>
+   
+   <h3>My lists</h3>
+   <p>Curated lists of stuff. For now, I'm embeding my Rainbow.io account because its easier, but I hope to find a fast way to update and display my lists natively soon.</p>
+   
+   <iframe style="border: 0; width: 100%; height: 450px;" allowfullscreen frameborder="0" src="https://raindrop.io/JayVee/embed/me/no-header=true&theme=dark"></iframe>
+
 </div>
+
+
