--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -41,7 +41,7 @@ eleventyComputed:
    <h3>My lists</h3>
    <p>Curated lists of stuff. For now, I'm embedding my Rainbow.io account because its easier, but I hope to find a fast way to update and display my lists natively soon.</p>
    
-   <iframe style="border: 0; width: 100%; height: 450px;" allowfullscreen frameborder="0" src="https://raindrop.io/JayVee/embed/me/no-header=true&theme=dark"></iframe>
+<iframe style="border: 0; width: 100%; height: 450px;" allowfullscreen frameborder="0" src="https://raindrop.io/JayVee/embed/me/no-header=true"></iframe>
 
 </div>
 
