--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -38,8 +38,8 @@ eleventyComputed:
       <li>stories: <a href="https://www.fromjason.xyz/stories/feed/feed.xml" title="subscribe rss stories" class="accent">xml</a> | <a href="https://www.fromjason.xyz/stories/feed/feed.json" title="subscribe rss stories" class="accent">json</a></li>
    </ul>
    
-   <h3>My lists</h3>
-   <p>Curated lists of stuff. For now, I'm embedding my Rainbow.io account because its easier, but I hope to find a fast way to update and display my lists natively soon.</p>
+   <h3>My public bookmarks & lists</h3>
+   <p>Curated lists of stuff. For now, I'm embedding <a href="#" title="my public bookmarks and lists" rel="me">my public Rainbow.io account</a> because its easier. But, I hope to find a fast way to update and display my lists natively soon.</p>
    
 <iframe style="border: 0; width: 100%; height: 450px;" allowfullscreen frameborder="0" src="https://raindrop.io/JayVee/embed/me/no-header=true"></iframe>
 
