--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -33,9 +33,9 @@ eleventyComputed:
    <p>Note: both xml and json versions of my rss feed provide the same content and should both work in most reeders</p>
 
    <ul>
-      <li>notebook: <a href="https://www.fromjason.xyz/notebook/feed/feed.xml" title="subscribe rss notebook" class="accent">xml</a> | <a href="https://www.fromjason.xyz/notebook/feed/feed.json" title="subscribe rss notebook" class="accent">json</a></li>
-      <li>freelance: <a href="https://www.fromjason.xyz/freelance/feed/feed.xml" title="subscribe rss freelance" class="accent">xml</a> | <a href="https://www.fromjason.xyz/freelance/feed/feed.json" title="subscribe rss freelance" class="accent">json</a></li>
-      <li>stories: <a href="https://www.fromjason.xyz/stories/feed/feed.xml" title="subscribe rss stories" class="accent">xml</a> | <a href="https://www.fromjason.xyz/stories/feed/feed.json" title="subscribe rss stories" class="accent">json</a></li>
+      <li>notebook: <a href="https://www.fromjason.xyz/notebook/feed/feed.xml" title="subscribe rss notebook" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/notebook/feed/feed.json" title="subscribe rss notebook" class="accent">json</a></li>
+      <li>freelance: <a href="https://www.fromjason.xyz/freelance/feed/feed.xml" title="subscribe rss freelance" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/freelance/feed/feed.json" title="subscribe rss freelance" class="accent">json</a></li>
+      <li>stories: <a href="https://www.fromjason.xyz/stories/feed/feed.xml" title="subscribe rss stories" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/stories/feed/feed.json" title="subscribe rss stories" class="accent">json</a></li>
    </ul>
    
    <h3>My public bookmarks & lists</h3>
