--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -35,14 +35,14 @@ eleventyComputed:
    <p>Note: both xml and json versions of my rss feed provide the same content and should both work in most reeders</p>
 
    <ol>
-      <li>notebook: <a href="https://www.fromjason.xyz/notebook/feed/feed.xml" title="subscribe rss notebook" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/notebook/feed/feed.json" title="subscribe rss notebook" class="accent">json</a></li>
-      <li>freelance: <a href="https://www.fromjason.xyz/freelance/feed/feed.xml" title="subscribe rss freelance" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/freelance/feed/feed.json" title="subscribe rss freelance" class="accent">json</a></li>
-      <li>stories: <a href="https://www.fromjason.xyz/stories/feed/feed.xml" title="subscribe rss stories" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/stories/feed/feed.json" title="subscribe rss stories" class="accent">json</a></li>
-      <li>travel: <a href="https://www.fromjason.xyz/travel/feed/feed.xml" title="subscribe rss travel" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/travel/feed/feed.json" title="subscribe rss travel" class="accent">json</a></li>
+      <li>notebook:&nbsp;&nbsp;<a href="https://www.fromjason.xyz/notebook/feed/feed.xml" title="subscribe rss notebook" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/notebook/feed/feed.json" title="subscribe rss notebook" class="accent">json</a></li>
+      <li>freelance:&nbsp;&nbsp;<a href="https://www.fromjason.xyz/freelance/feed/feed.xml" title="subscribe rss freelance" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/freelance/feed/feed.json" title="subscribe rss freelance" class="accent">json</a></li>
+      <li>stories:&nbsp;&nbsp;<a href="https://www.fromjason.xyz/stories/feed/feed.xml" title="subscribe rss stories" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/stories/feed/feed.json" title="subscribe rss stories" class="accent">json</a></li>
+      <li>travel:&nbsp;&nbsp;<a href="https://www.fromjason.xyz/travel/feed/feed.xml" title="subscribe rss travel" class="accent">xml</a>&nbsp;&nbsp;&#183;&nbsp;&nbsp;<a href="https://www.fromjason.xyz/travel/feed/feed.json" title="subscribe rss travel" class="accent">json</a></li>
    </ol>
    
    <h3 id="my-curated-lists">My public bookmarks & lists</h3>
-   <p>Curated lists of stuff. For now, I'm embedding <a href="https://raindrop.io/JayVee" title="my public bookmarks and lists" rel="me">my public Rainbow.io account</a> because its easier. But, I hope to find a fast way to update and display my lists natively soon.</p>
+   <p>Curated lists of stuff. For now, I'm embedding <a href="https://raindrop.io/JayVee" title="my public bookmarks and lists" rel="me">my public Rainbow.io account</a> because its easier. But, I hope to soon build a fast way to update and display my lists natively on FJ.</p>
    
 <iframe style="border: 0; width: 100%; height: 450px;" allowfullscreen frameborder="0" src="https://raindrop.io/JayVee/embed/me/no-header=true"></iframe>
 
