--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -19,7 +19,7 @@ eleventyComputed:
    {% set postslist = filterByMe %}
    {% include "mepostslist.njk" %}
    <h2>Where to find me</h2>
-   <p>Here are a few ways to reach me, follow my writing.</p>
+   <p class="justify-left">Here are a few ways to reach me, follow my writing.</p>
    <h3>Email</h3>
    <p>Shoot me an email anytime about anything. I'd love to hear from you » <a href="mailto:inbox@jvelazquez.email" title="my email address">Email Jason</a>.</p>
    <h3>My socials</h3>
