--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -22,7 +22,7 @@ eleventyComputed:
    <p class="justify-left">Here are a few ways to reach me, follow my writing.</p>
    <h3>Email</h3>
    <p>Shoot me an email anytime about anything. I'd love to hear from you » <a href="mailto:inbox@jvelazquez.email" title="my email address">Email Jason</a>.</p>
-   <h3>My socials</h3>
+   <h3>Socials</h3>
    <p>I'm slowly moving away from centralized social media, <i>in theory</i>. In practice, I'm still fairly active on these accounts. I'm spending more time on Mastodon these days</p>
    <ul>
       <li>Instagram: <a href="https://instagram.com/jasondotgov" rel="me" tilte="my instagram">@jasondotgov</a></li>
