--- a/content/me/colophon.njk
+++ b/content/me/colophon.njk
@@ -1,8 +1,8 @@
 ---
 title: Colophon
 description: Or, how I made this website, who helped, and all my inspirations.
-graphic: '20.png'
-graphicAlt: 'illustration of a mask'
+graphic: 'graphic-colophon.png'
+graphicAlt: 'illustration of two masks'
 sub: me
 ---
 <h1>{{ title }}</h1>
