--- a/content/me/now.njk
+++ b/content/me/now.njk
@@ -1,7 +1,7 @@
 ---
 title: Now
 description: Things I'm up to— my current projects, passions, hyper fixations, and unreasonable goals. 
-graphic: '20.png'
+graphic: 'graphic-pocketwatch.png'
 graphicAlt: 'illustration of a mask'
 sub: me
 ---
