--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -43,8 +43,10 @@ eleventyComputed:
    
    <h3 id="my-curated-lists">My public bookmarks & lists</h3>
    <p>Curated lists of stuff. For now, I'm embedding <a href="https://raindrop.io/JayVee" title="my public bookmarks and lists" rel="me">my public Rainbow.io account</a> because its easier. But, I hope to soon build a fast way to update and display my lists natively on FJ.</p>
-   
-<iframe style="border: 0; width: 100%; height: 450px;" allowfullscreen frameborder="0" src="https://raindrop.io/JayVee/embed/me/no-header=true"></iframe>
+ <script>
+ document.getElementById("inneriframe").contentDocument.body.style.fontFamily = "Volume Tc";
+ </script>  
+<iframe class="inneriframe" style="border: 0; width: 100%; height: 450px;" allowfullscreen frameborder="0" src="https://raindrop.io/JayVee/embed/me/no-header=true"></iframe>
 
 </div>
 
