--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -42,7 +42,7 @@ eleventyComputed:
    </ol>
    
    <h3 id="my-curated-lists">My public bookmarks & lists</h3>
-   <p>Curated lists of stuff. For now, I'm embedding <a href="https://raindrop.io/JayVee" title="my public bookmarks and lists" rel="me">my public Rainbow.io account</a> because its easier. But, I hope to soon build a fast way to update and display my lists natively on FJ.</p>
+   <p>Curated lists of stuff. For now, I'm embedding <a href="https://raindrop.io/JayVee" title="my public bookmarks and lists" rel="me">my public Raindrop.io account</a> because its easier. But, I hope to soon build a fast way to update and display my lists natively on FJ.</p>
  <script>
  document.getElementById("inneriframe").contentDocument.body.style.fontFamily = "Volume Tc";
  </script>  
