--- a/content/me/index.njk
+++ b/content/me/index.njk
@@ -1,7 +1,7 @@
 ---
 title: Jason Velazquez
 description: This section is about me, Jason. It includes a few sub pages, plus where to find me.  Why are you looking for me? Weirdo. (Please look for me). 
-graphic: '20a.png'
+graphic: 'IMG_2427.jpeg'
 graphicAlt: 'illustration of a mask'
 plot: me
 eleventyComputed:
